[tool.poetry]
name = "info-screens"
version = "0.1.0"
description = "Poetry env for info-screens project"
authors = ["sindrelothe <sindrl@online.no>"]

[tool.poetry.dependencies]
python = "3.7.3"
asgiref = "3.5.0"
astroid = "2.9.3"
attrs = "21.4.0"
dj-database-url = "0.5.0"
django-appconf = "1.0.5"
django-compressor = "3.1"
django-debug-toolbar = "3.2.4"
django-extensions = "3.1.5"
django-filter = "21.1"
django-guardian = "2.4.0"
django-heroku = "0.3.1"
django-libsass = "0.9"
django-user-agents = "0.4.0"
Django = "3.2.12"
gunicorn = "20.1.0"
importlib-metadata = "4.11.3"
iniconfig = "1.1.1"
isort = "5.10.1"
lazy-object-proxy = "1.7.1"
libsass = "0.21.0"
mccabe = "0.6.1"
packaging = "21.3"
platformdirs = "2.5.1"
pluggy = "1.0.0"
psycopg2 = "2.9.3"
py = "1.11.0"
pylint-django = "2.5.2"
pylint-plugin-utils = "0.7"
pylint-quotes = "0.2.3"
pylint = "2.12.2"
pyparsing = "3.0.7"
pytest-django = "4.5.2"
pytest = "7.1.1"
pytz = "2022.1"
rcssmin = "1.1.0"
rjsmin = "1.2.0"
setuptools = "60.10.0"
six = "1.16.0"
sqlparse = "0.4.2"
toml = "0.10.2"
tomli = "2.0.1"
typed-ast = "1.5.2"
typing-extensions = "4.1.1"
ua-parser = "0.10.0"
user-agents = "2.2.0"
whitenoise = "6.0.0"
wrapt = "1.13.3"
yapf = "0.32.0"
zipp = "3.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
